Add Background Blur video filter

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,12 @@
             <button id="stop-screenshare-btn" disabled>Stop screen share</button>
         </div>
 
+        <!-- Video Filters -->
+        <div id="video-filters">
+            <button id="background-blur-btn" disabled>Background Blur</button>
+            <button id="stop-video-filter-btn" disabled>Stop Video Filter</button>
+        </div>
+
         <!-- Recording Actions and Status -->
         <div id="recording">
             <button id="start-recording-btn" disabled>Start recording</button>
