--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Basic Web Video Conference Application</title>
-    <script type="text/javascript" src="https://unpkg.com/@voxeet/voxeet-web-sdk@3.3.0-beta.4/dist/voxeet-sdk.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/@voxeet/voxeet-web-sdk"></script>
 </head>
 
 <body style="background-color: white;">
