--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Basic Web Video Conference Application</title>
-    <script type="text/javascript" src="https://unpkg.com/@voxeet/voxeet-web-sdk"></script>
+    <script type="text/javascript" src="voxeet-sdk.js"></script>
 </head>
 
 <body style="background-color: white;">
@@ -38,7 +38,6 @@
             <input id="alias-input" value="Avengers meeting" />
             <button id="join-btn" disabled>Join</button>
             <button id="leave-btn" disabled>Leave</button>
-            <label id="label-dolby-voice"></label>
         </div>
         
         <!-- Actions on Video and Screen Share -->
