--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Basic Web Video Conference Application</title>
-    <script type="text/javascript" src="voxeet-sdk.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@voxeet/voxeet-web-sdk@3.7.0/dist/voxeet-sdk.js"></script>
 </head>
 
 <body style="background-color: white;">
@@ -13,7 +13,7 @@
         <!-- Preview -->
         <div id="preview">
             <h3>Preview</h3>
-            <video id="preview-video" autoplay="true"/>
+            <video id="preview-video" autoplay="true"></video>
         </div>
 
         <!-- Video filters actions in preview -->
